<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_text_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/lesson1_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_1" />

            <Button
                android:id="@+id/lesson2_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_2" />

            <Button
                android:id="@+id/lesson3_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_3" />

            <Button
                android:id="@+id/lesson4_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/lesson5_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_5" />

            <Button
                android:id="@+id/lesson6_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_6" />

            <Button
                android:id="@+id/lesson7_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_7" />

            <Button
                android:id="@+id/lesson8_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_8" />

        </TableRow>
    </TableLayout>

</LinearLayout>