<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/lesson_2"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/duotrioquatro"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/disimos_definition"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/trisimos_definition"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tetrasimos_definition"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/disimos"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="176dp"
                    android:layout_height="18dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/disimos" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/trisimos"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="256dp"
                    android:layout_height="18dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/trisimos" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/tetrasimos"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="339dp"
                    android:layout_height="18dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/tetrasimos" />
            </TableRow>

        </TableLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/time_characters"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_characters_definition"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/time_1"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/add_time_1"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/heavy_definition"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heavy_definition_used"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center">

                <ImageView style="@style/heavy_image_view_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/heavy"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center">

                <ImageView style="@style/heavy_simple_image_view_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/pause_time_1"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center">

                <ImageView style="@style/heavy_double_image_view_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/pause_time_2"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center">

                <ImageView style="@style/heavy_triple_image_view_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/pause_time_3"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/time_characters_examples"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_characters_examples_definition"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/fraction"
                    android:textSize="20sp" />

                <ImageView style="@style/fraction_image_view_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/phthong_1_for_2_time"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/dot_simple"
                    android:textSize="20sp" />

                <ImageView style="@style/simple_dot_image_view_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/phthong_1_for_2_time"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/dot_double"
                    android:textSize="20sp" />

                <ImageView style="@style/double_dots_image_view_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/phthong_1_for_3_time"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/dot_triple"
                    android:textSize="20sp" />

                <ImageView style="@style/triple_dots_image_view_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/phthong_1_for_4_time"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/yfen"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/yfen_definition"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:gravity="center">

            <ImageView style="@style/yfen_image_view_id" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/yfen_examples"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView style="@style/ison_image_view_id" />

                    <ImageView
                        style="@style/fraction_small_image_view_id"
                        android:layout_gravity="center_horizontal"
                        android:translationY="17dp" />
                </FrameLayout>

                <TextView style="@style/equal_text_view_id" />

                <FrameLayout
                    android:layout_width="145dp"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/ison_image_view_id"
                        android:translationX="-73dp" />
                    <!--the space between ison with 15dp and the first ison has 6dp space in start-->
                    <ImageView
                        style="@style/ison_image_view_id"
                        android:translationX="4dp" />

                    <ImageView
                        style="@style/yfen_image_view_id"
                        android:layout_gravity="bottom"
                        android:translationX="46dp" />

                </FrameLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView style="@style/ison_image_view_id" />

                    <ImageView
                        style="@style/double_dots_small_image_view_id"
                        android:layout_gravity="center_horizontal"
                        android:translationX="8dp"
                        android:translationY="37dp" />
                </FrameLayout>

                <TextView style="@style/equal_text_view_id" />

                <FrameLayout
                    android:layout_width="220dp"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/ison_image_view_id"
                        android:translationX="-79dp" />

                    <ImageView style="@style/ison_image_view_id" />

                    <ImageView
                        style="@style/ison_image_view_id"
                        android:translationX="79dp" />

                    <ImageView
                        style="@style/yfen_image_view_id"
                        android:layout_gravity="bottom"
                        android:translationX="36dp"
                        android:translationY="-2dp" />

                    <ImageView
                        style="@style/yfen_image_view_id"
                        android:layout_gravity="bottom"
                        android:translationX="120dp"
                        android:translationY="-2dp" />

                </FrameLayout>
            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>